--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,8 @@
 "icons": [
     {
       "src": "icon.svg",
-      "sizes": "any",
+      "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     }
-  ]
-}
+]
