--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "description": "Chiltern Railways CEA shift roster calendar for Marylebone Station",
 "start_url": ".",
   "display": "standalone",
+  "display_override": ["standalone", "fullscreen"],
   "background_color": "#001e3c",
   "theme_color": "#001e3c",
   "orientation": "portrait-primary",
